auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b7ca136",
+   "id": "fe1ab210",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c01d1baa",
+   "id": "4085db83",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60cb7a68",
+   "id": "404e2d7d",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb69517d",
+   "id": "f4f3f0bd",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2670bf",
+   "id": "f3ca377f",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -67,7 +67,7 @@
   }
  ],
  "metadata": {
-  "date": 1684236578.671103,
+  "date": 1684405498.1984942,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
