--- a/jax_intro.ipynb
+++ b/jax_intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "873de6fd",
+   "id": "30146a66",
    "metadata": {},
    "source": [
     "# An Introduction to JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e73395b3",
+   "id": "0d6fed53",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2986392f",
+   "id": "d4b7de37",
    "metadata": {},
    "source": [
     "## JAX as a NumPy Replacement\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38dea185",
+   "id": "e3737556",
    "metadata": {},
    "source": [
     "### Similarities\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "516b9f0c",
+   "id": "72c390d9",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0219bace",
+   "id": "bd088506",
    "metadata": {},
    "source": [
     "Now we can use `jnp` in place of `np` for the usual array operations:"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8dfd7d",
+   "id": "1f8dfff9",
    "metadata": {
     "hide-output": false
    },
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88230a5e",
+   "id": "1b2c98ba",
    "metadata": {
     "hide-output": false
    },
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daff2976",
+   "id": "e9cf31ce",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "160f3c07",
+   "id": "0c9f64b8",
    "metadata": {
     "hide-output": false
    },
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322cd419",
+   "id": "c9cc86b4",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84ef3f73",
+   "id": "a216476a",
    "metadata": {},
    "source": [
     "However, the array object `a` is not a NumPy array:"
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf25e9b1",
+   "id": "9033c8b4",
    "metadata": {
     "hide-output": false
    },
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44d80b27",
+   "id": "f596b617",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f22a29",
+   "id": "a1da1d0e",
    "metadata": {},
    "source": [
     "Even scalar-valued maps on arrays return JAX arrays."
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c502fad9",
+   "id": "d616abf8",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2d808f",
+   "id": "d81df2d9",
    "metadata": {},
    "source": [
     "JAX arrays are also called “device arrays,” where term “device” refers to a\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f53676a",
+   "id": "80cfa8d4",
    "metadata": {
     "hide-output": false
    },
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4729318a",
+   "id": "1c16fe0e",
    "metadata": {
     "hide-output": false
    },
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e242bb",
+   "id": "15b6a879",
    "metadata": {
     "hide-output": false
    },
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8c0da21",
+   "id": "a4736109",
    "metadata": {
     "hide-output": false
    },
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be17321",
+   "id": "91e4e1e7",
    "metadata": {},
    "source": [
     "### Differences\n",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "552b7cf6",
+   "id": "275c9dc5",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e8c6a4",
+   "id": "e583acf5",
    "metadata": {},
    "source": [
     "Let’s check this works:"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea688d02",
+   "id": "33a299ef",
    "metadata": {
     "hide-output": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d64fccb",
+   "id": "b84fdb74",
    "metadata": {},
    "source": [
     "As a NumPy replacement, a more significant difference is that arrays are treated as **immutable**.\n",
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "073eb7bd",
+   "id": "7c791daa",
    "metadata": {
     "hide-output": false
    },
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8eb028e",
+   "id": "975addd3",
    "metadata": {},
    "source": [
     "and then mutate the data in memory:"
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "456d6f9a",
+   "id": "3224010f",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bece5df5",
+   "id": "4ef6cbb1",
    "metadata": {},
    "source": [
     "In JAX this fails:"
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "020067f5",
+   "id": "99bbf8c7",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71871926",
+   "id": "9eff72c0",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7befab13",
+   "id": "b78afdc7",
    "metadata": {},
    "source": [
     "In line with immutability, JAX does not support inplace operations:"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d33da05",
+   "id": "0511a38f",
    "metadata": {
     "hide-output": false
    },
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "219a4979",
+   "id": "e4417d07",
    "metadata": {
     "hide-output": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea699500",
+   "id": "955749dd",
    "metadata": {},
    "source": [
     "The designers of JAX chose to make arrays immutable because JAX uses a\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7eb3c5",
+   "id": "6fc02890",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477ff1dd",
+   "id": "4a895594",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b7ef28a",
+   "id": "1bb3465c",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "006cab66",
+   "id": "902f5906",
    "metadata": {},
    "source": [
     "We can check that the array is mutated by verifying its identity is unchanged:"
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce79b169",
+   "id": "c8e1ef49",
    "metadata": {
     "hide-output": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d186544",
+   "id": "7e394df6",
    "metadata": {},
    "source": [
     "## Random Numbers\n",
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "494595f5",
+   "id": "cc57b867",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e57bb25c",
+   "id": "c70d673b",
    "metadata": {},
    "source": [
     "First we produce a key, which seeds the random number generator."
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b703e95",
+   "id": "0645be74",
    "metadata": {
     "hide-output": false
    },
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43147ee4",
+   "id": "3557e854",
    "metadata": {
     "hide-output": false
    },
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4202ce24",
+   "id": "6002ebed",
    "metadata": {
     "hide-output": false
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a4e5a62",
+   "id": "7083143f",
    "metadata": {},
    "source": [
     "Now we can use the key to generate some random numbers:"
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717998b3",
+   "id": "aa766eb6",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf62a6f4",
+   "id": "202f7583",
    "metadata": {},
    "source": [
     "If we use the same key again, we initialize at the same seed, so the random numbers are the same:"
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c95303c8",
+   "id": "989aed05",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b78970e",
+   "id": "f9e2b3f9",
    "metadata": {},
    "source": [
     "To produce a (quasi-) independent draw, best practice is to “split” the existing key:"
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d37561",
+   "id": "8c8899aa",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ef2489",
+   "id": "a6d38593",
    "metadata": {
     "hide-output": false
    },
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5278ae4",
+   "id": "5a9da29b",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d48be3",
+   "id": "31e666cf",
    "metadata": {},
    "source": [
     "The function below produces `k` (quasi-) independent random `n x n` matrices using this procedure."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73995449",
+   "id": "a0de2cef",
    "metadata": {
     "hide-output": false
    },
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5079dddd",
+   "id": "67accfe3",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5dfd749",
+   "id": "e70b0060",
    "metadata": {},
    "source": [
     "One point to remember is that JAX expects tuples to describe array shapes, even for flat arrays.  Hence, to get a one-dimensional array of normal random draws we use `(len, )` for the shape, as in"
@@ -670,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f24c13f6",
+   "id": "7b9cd429",
    "metadata": {
     "hide-output": false
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f570d8",
+   "id": "718d4f5f",
    "metadata": {},
    "source": [
     "## JIT Compilation\n",
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569022e4",
+   "id": "8d5a8160",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c71c7340",
+   "id": "c84e9022",
    "metadata": {},
    "source": [
     "Let’s build an array to call the function on."
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c424b18b",
+   "id": "9cfad0cb",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "469da048",
+   "id": "f08a4533",
    "metadata": {},
    "source": [
     "How long does the function take to execute?"
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e487925",
+   "id": "031a924c",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a2285b",
+   "id": "7e5095b1",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2207405",
+   "id": "14ea7197",
    "metadata": {
     "hide-output": false
    },
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc94557",
+   "id": "7c1d1ad3",
    "metadata": {},
    "source": [
     "Let’s run once to compile it:"
@@ -791,7 +791,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e40bdac",
+   "id": "382ee3e4",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fed67e15",
+   "id": "0b008555",
    "metadata": {},
    "source": [
     "And now let’s time it."
@@ -811,7 +811,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af8f96da",
+   "id": "35351880",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45b0382",
+   "id": "cce5868d",
    "metadata": {},
    "source": [
     "Note the large speed gain."
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0987bee4",
+   "id": "68ea8ef3",
    "metadata": {},
    "source": [
     "## Functional Programming\n",
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1565e3d4",
+   "id": "5b034c36",
    "metadata": {
     "hide-output": false
    },
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66c86c11",
+   "id": "625fa400",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "339f5310",
+   "id": "20cfbd64",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f888b2",
+   "id": "eb897de0",
    "metadata": {},
    "source": [
     "In the code above, the global value `a=1` is fused into the jitted function.\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14730448",
+   "id": "7f9724f9",
    "metadata": {
     "hide-output": false
    },
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e424594d",
+   "id": "0ae2e24d",
    "metadata": {
     "hide-output": false
    },
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f27dc0e7",
+   "id": "10a1b59c",
    "metadata": {},
    "source": [
     "Changing the dimension of the input triggers a fresh compilation of the function, at which time the change in the value of `a` takes effect:"
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4751cab",
+   "id": "483e88b4",
    "metadata": {
     "hide-output": false
    },
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c07155b",
+   "id": "b21153a0",
    "metadata": {
     "hide-output": false
    },
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefd8a45",
+   "id": "fa2b8df5",
    "metadata": {},
    "source": [
     "Moral of the story: write pure functions when using JAX!"
@@ -972,7 +972,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19680b6",
+   "id": "f5777048",
    "metadata": {},
    "source": [
     "## Gradients\n",
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbca83c3",
+   "id": "bb7eb8a8",
    "metadata": {
     "hide-output": false
    },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "956de541",
+   "id": "5ee09f83",
    "metadata": {},
    "source": [
     "Let’s take the derivative:"
@@ -1010,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2a4dcdb",
+   "id": "b26ebfcc",
    "metadata": {
     "hide-output": false
    },
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b113b893",
+   "id": "e0a5be71",
    "metadata": {
     "hide-output": false
    },
@@ -1033,7 +1033,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b7b8e00",
+   "id": "44ec5b55",
    "metadata": {},
    "source": [
     "Let’s plot the function and derivative, noting that $ f'(x) = x $."
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "756c7680",
+   "id": "36bd1b08",
    "metadata": {
     "hide-output": false
    },
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebdba2a1",
+   "id": "66ef0d0a",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a0bfbb",
+   "id": "868fc293",
    "metadata": {},
    "source": [
     "## Exercise 2.1\n",
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4227192",
+   "id": "3ac18827",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6baba7ed",
+   "id": "98b145b6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.1](https://jax.quantecon.org/#jax_intro_ex1)\n",
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba29194",
+   "id": "0a3c8f1a",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e144eaba",
+   "id": "d1022156",
    "metadata": {},
    "source": [
     "Let’s try it:"
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84534469",
+   "id": "1ea148e2",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea1c0088",
+   "id": "788ef627",
    "metadata": {},
    "source": [
     "This number looks good, given the figure."
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfef36da",
+   "id": "ec7b05a4",
    "metadata": {},
    "source": [
     "## Exercise 2.2\n",
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5af601",
+   "id": "d1b78a37",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 2.2](https://jax.quantecon.org/#jax_intro_ex2)\n",
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73b480b9",
+   "id": "1dbc932e",
    "metadata": {
     "hide-output": false
    },
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f675f0",
+   "id": "c7531e66",
    "metadata": {},
    "source": [
     "Let’s run it once to compile it:"
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa7d7002",
+   "id": "cf88bf5e",
    "metadata": {
     "hide-output": false
    },
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1808a1",
+   "id": "d17e0671",
    "metadata": {},
    "source": [
     "And now let’s time it:"
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "574a1194",
+   "id": "40e6f3e6",
    "metadata": {
     "hide-output": false
    },
@@ -1279,7 +1279,7 @@
   }
  ],
  "metadata": {
-  "date": 1684236578.7618883,
+  "date": 1684405498.286138,
   "filename": "jax_intro.md",
   "kernelspec": {
    "display_name": "Python",
