--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37bb15eb",
+   "id": "4943559b",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca785f59",
+   "id": "7dd00a43",
    "metadata": {},
    "source": [
     "# References\n",
@@ -25,7 +25,7 @@
   }
  ],
  "metadata": {
-  "date": 1684236579.2149107,
+  "date": 1684405498.723855,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
