auto publishing updates to notebooks

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fe1ab210",
+   "id": "79d3a5c1",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4085db83",
+   "id": "d7582996",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404e2d7d",
+   "id": "22d44e22",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +40,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4f3f0bd",
+   "id": "732e8d19",
+   "metadata": {},
+   "source": [
+    "# Data and Empirics\n",
+    "\n",
+    "- [Maximum Likelihood Estimation](https://jax.quantecon.org/mle.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a3f3d0",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ca377f",
+   "id": "0ca1b2c3",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -67,7 +77,7 @@
   }
  ],
  "metadata": {
-  "date": 1684405498.1984942,
+  "date": 1686803728.6480818,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
