--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9709210b",
+   "id": "fa77c016",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a410180f",
+   "id": "311d1017",
    "metadata": {},
    "source": [
     "## Overview\n",
     "\n",
-    "In this lecture we consider a some asset pricing problems and use them to\n",
+    "In this lecture we consider some asset pricing problems and use them to\n",
     "illustrate some foundations of JAX programming.\n",
     "\n",
     "Most of the heavy lifting will be done through routines from linear algebra.\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "760b362a",
+   "id": "17d65bb0",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd55d6bc",
+   "id": "99e4a14a",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ba54c00",
+   "id": "4a54e4f0",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d333b458",
+   "id": "484f2318",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4e9055e",
+   "id": "8b834eeb",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58f3156a",
+   "id": "5a62e89a",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaccfec2",
+   "id": "365a274e",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "146c6086",
+   "id": "3b76892f",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd26d8b",
+   "id": "ba5dc350",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eba1e2c",
+   "id": "3323315c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757b491e",
+   "id": "78826b59",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97c77db2",
+   "id": "ab0be615",
    "metadata": {
     "hide-output": false
    },
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58b84b72",
+   "id": "3f5f2322",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7d1237c",
+   "id": "32b4b00a",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef59671",
+   "id": "c89c7007",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $.\n",
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec79d27a",
+   "id": "919baa5d",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8edb37b0",
+   "id": "67615eaf",
    "metadata": {},
    "source": [
     "Just to double check, let’s write a loop version and check we get the same matrix."
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1013174",
+   "id": "8f5b8a7f",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d44a81",
+   "id": "c29a4934",
    "metadata": {
     "hide-output": false
    },
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41fdd03b",
+   "id": "3edb5498",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061edd41",
+   "id": "32e61316",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb5a678",
+   "id": "9a2b50fc",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ec543c1",
+   "id": "7fbb1cad",
    "metadata": {
     "hide-output": false
    },
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d688ad80",
+   "id": "17e14e9f",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd8abbb6",
+   "id": "ccf03d12",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -804,8 +804,7 @@
     "$$\n",
     "H[i, j, k, i', j', k']\n",
     "    =\n",
-    "    \\beta \\sum_{i', j', k'}\n",
-    "        \\kappa[i, j, k] P[i, i']Q[j, j']R[k, k']\n",
+    "    \\beta \\kappa[i, j, k] P[i, i']Q[j, j']R[k, k']\n",
     "$$\n",
     "\n",
     "then [(4.20)](#equation-neweqn104-new) becomes\n",
@@ -814,7 +813,7 @@
     "<a id='equation-eq-neweqn105'></a>\n",
     "$$\n",
     "v[i, j, k] =\n",
-    "    \\beta \\sum_{i', j', k'}\n",
+    "    \\sum_{i', j', k'}\n",
     "        H[i, j, k, i', j', k'] (1 + v[i', j', k']) \\tag{4.21}\n",
     "$$\n",
     "\n",
@@ -836,7 +835,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333837f2",
+   "id": "552ecafa",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -857,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f749468",
+   "id": "79669b4c",
    "metadata": {
     "hide-output": false
    },
@@ -902,7 +901,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2908c438",
+   "id": "09a538c1",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ H $."
@@ -911,7 +910,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82643d77",
+   "id": "cf70517c",
    "metadata": {
     "hide-output": false
    },
@@ -940,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f5cbac",
+   "id": "5cff996c",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -949,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df3c0a2",
+   "id": "c7b75f97",
    "metadata": {
     "hide-output": false
    },
@@ -992,7 +991,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f0097fa",
+   "id": "c8bf3e76",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1001,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28511111",
+   "id": "db4f1ff4",
    "metadata": {
     "hide-output": false
    },
@@ -1014,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e636b33",
+   "id": "38eb1462",
    "metadata": {
     "hide-output": false
    },
@@ -1027,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59265b60",
+   "id": "9c9c30fa",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1036,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d5252fd",
+   "id": "402273df",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc64ac8",
+   "id": "5f9f7b94",
    "metadata": {
     "hide-output": false
    },
@@ -1070,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e46e6c3",
+   "id": "fe99e7a6",
    "metadata": {
     "hide-output": false
    },
@@ -1086,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70509d30",
+   "id": "20be1faf",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1099,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "043bf298",
+   "id": "b08884ed",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2af00d",
+   "id": "8bab4931",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ H $.\n",
@@ -1136,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2fcc9b7",
+   "id": "29069f4d",
    "metadata": {
     "hide-output": false
    },
@@ -1165,7 +1164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea9caf88",
+   "id": "4c8d8e6b",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1174,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07ab1a9a",
+   "id": "6f4b1bf9",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df60d12",
+   "id": "83b6cd6b",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1222,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d173af1",
+   "id": "763ba03b",
    "metadata": {
     "hide-output": false
    },
@@ -1235,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0adf47d4",
+   "id": "25482c6e",
    "metadata": {
     "hide-output": false
    },
@@ -1249,7 +1248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "195a4906",
+   "id": "e89c1f82",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1258,7 +1257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa130bb0",
+   "id": "71a1e762",
    "metadata": {
     "hide-output": false
    },
@@ -1271,7 +1270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b71a7d9f",
+   "id": "0646ba13",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1280,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f91a6bc0",
+   "id": "3acdd58d",
    "metadata": {
     "hide-output": false
    },
@@ -1293,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3902533",
+   "id": "faa276a7",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1302,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d154481d",
+   "id": "f0381d18",
    "metadata": {
     "hide-output": false
    },
@@ -1313,7 +1312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e27b5a7c",
+   "id": "54774a2c",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1322,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7a44e7",
+   "id": "ac11e31f",
    "metadata": {
     "hide-output": false
    },
@@ -1335,7 +1334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aee8589",
+   "id": "f398d02e",
    "metadata": {},
    "source": [
     "## Efficient JAX Version\n",
@@ -1358,7 +1357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a29f0a9",
+   "id": "2b86a34b",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5b07e7c",
+   "id": "6e697ff8",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function that acts directly on this linear operator."
@@ -1394,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff17812b",
+   "id": "47d7d06b",
    "metadata": {
     "hide-output": false
    },
@@ -1420,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "685e2daf",
+   "id": "adc66bde",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1429,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698412b5",
+   "id": "4c149a84",
    "metadata": {
     "hide-output": false
    },
@@ -1441,7 +1440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c344c0b",
+   "id": "3736227b",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1450,7 +1449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac43615",
+   "id": "edbd93b6",
    "metadata": {
     "hide-output": false
    },
@@ -1464,7 +1463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50e4b026",
+   "id": "f884dde1",
    "metadata": {
     "hide-output": false
    },
@@ -1475,7 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8749d737",
+   "id": "fcb09b5a",
    "metadata": {},
    "source": [
     "Now let’s run again without compile time."
@@ -1484,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26819183",
+   "id": "2242b021",
    "metadata": {
     "hide-output": false
    },
@@ -1497,7 +1496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d66e35e7",
+   "id": "e7835626",
    "metadata": {},
    "source": [
     "Here’s the ratio of times (Efficient JAX / JAX):"
@@ -1506,7 +1505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e01b56f9",
+   "id": "1b2bacc9",
    "metadata": {
     "hide-output": false
    },
@@ -1517,7 +1516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac9acecf",
+   "id": "0dcd6471",
    "metadata": {},
    "source": [
     "The speed is about the same but now we can work with much larger grids.\n",
@@ -1528,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e002dd4",
+   "id": "8739765b",
    "metadata": {
     "hide-output": false
    },
@@ -1543,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e08e08",
+   "id": "6e693f51",
    "metadata": {
     "hide-output": false
    },
@@ -1557,7 +1556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb95ea9",
+   "id": "21d7acdc",
    "metadata": {
     "hide-output": false
    },
@@ -1570,7 +1569,7 @@
   }
  ],
  "metadata": {
-  "date": 1684405498.5058682,
+  "date": 1686803728.8566558,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
