--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52429d53",
+   "id": "40db81e1",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f822490b",
+   "id": "b77afa9e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8a358e",
+   "id": "48bd54df",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f632bceb",
+   "id": "90da2758",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -66,13 +66,13 @@
     "Combining with the demand curve and writing $ y, y' $ for $ Y_t, Y_{t+1} $, this becomes\n",
     "\n",
     "$$\n",
-    "r(y, z, y′) := (a_0 - a_1  y + z - c) y - γ  (y′ - y)^2\n",
+    "r(y, z, y') := (a_0 - a_1  y + z - c) y - γ  (y' - y)^2\n",
     "$$\n",
     "\n",
     "The firm maximizes present value of expected discounted profits.  The Bellman equation is\n",
     "\n",
     "$$\n",
-    "v(y, z) = \\max_{y'} \\left\\{ r(y, z, y′) + β \\sum_{z′} v(y′, z′) Q(z, z′) \\right\\}.\n",
+    "v(y, z) = \\max_{y'} \\left\\{ r(y, z, y') + β \\sum_{z'} v(y', z') Q(z, z') \\right\\}.\n",
     "$$\n",
     "\n",
     "We discretize $ y $ to a finite grid `y_grid`.\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bec7d6df",
+   "id": "744e2a45",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0234a083",
+   "id": "93e7241c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5c4f641",
+   "id": "fe1e26c1",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a71dd35",
+   "id": "4b5a9399",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96642f1a",
+   "id": "81aaf3df",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b24ab71e",
+   "id": "13d60419",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f43ebbc",
+   "id": "e7dbd39c",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6c78351",
+   "id": "9f540a66",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31f70694",
+   "id": "fb1b7979",
    "metadata": {
     "hide-output": false
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b3fd00a",
+   "id": "51c59378",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7875dbd6",
+   "id": "841f1995",
    "metadata": {
     "hide-output": false
    },
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd95a72",
+   "id": "a6503e48",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55b6fe6f",
+   "id": "09a5e095",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2612eaaf",
+   "id": "a94eb3e5",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8da27dac",
+   "id": "56241f38",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f782c4f",
+   "id": "57557162",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd6863e8",
+   "id": "b410f1a2",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a54580ef",
+   "id": "7e3b3fd6",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c7bc67",
+   "id": "2f519871",
    "metadata": {
     "hide-output": false
    },
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e69c595",
+   "id": "dc616e8b",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd2527f",
+   "id": "60a5ff8e",
    "metadata": {
     "hide-output": false
    },
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91fffba5",
+   "id": "84bde5f2",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b5c0b82",
+   "id": "5fa81eae",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72151f83",
+   "id": "8cb990cb",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -532,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60fa7e7",
+   "id": "6d6165f3",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110b4a9b",
+   "id": "30c91328",
    "metadata": {
     "hide-output": false
    },
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1090b8c5",
+   "id": "a3e26d49",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c558d33f",
+   "id": "a616e31e",
    "metadata": {
     "hide-output": false
    },
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e6f35da",
+   "id": "44823388",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ab2a7e2",
+   "id": "0f9566f9",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bcd43c3",
+   "id": "7d783b8a",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f24e13",
+   "id": "97014dc1",
    "metadata": {
     "hide-output": false
    },
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc18ed66",
+   "id": "17f02d89",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f183c949",
+   "id": "f041c2f6",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d3da5d9",
+   "id": "33ee759e",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "741386ea",
+   "id": "740eeee4",
    "metadata": {
     "hide-output": false
    },
@@ -733,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32138ed2",
+   "id": "3966efc2",
    "metadata": {
     "hide-output": false
    },
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdcdd9cb",
+   "id": "5f5c4451",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81d2c2d1",
+   "id": "2d7e0977",
    "metadata": {
     "hide-output": false
    },
@@ -789,7 +789,7 @@
   }
  ],
  "metadata": {
-  "date": 1684405498.5817811,
+  "date": 1686803729.1220944,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
