--- a/status.ipynb
+++ b/status.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d48b90a6",
+   "id": "d3436cab",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-05-18 10:03|cache|59.6|✅|\n",
-    "|arellano|2023-05-18 10:04|cache|36.7|✅|\n",
-    "|ifp_egm|2023-05-18 10:05|cache|73.04|✅|\n",
-    "|intro|2023-05-18 10:05|cache|4.02|✅|\n",
-    "|inventory_dynamics|2023-05-18 10:11|cache|362.81|✅|\n",
-    "|jax_intro|2023-05-18 10:12|cache|38.03|✅|\n",
-    "|kesten_processes|2023-05-18 10:12|cache|28.8|✅|\n",
-    "|markov_asset|2023-05-18 10:13|cache|21.78|✅|\n",
-    "|newtons_method|2023-05-18 10:15|cache|162.78|✅|\n",
-    "|opt_invest|2023-05-18 10:18|cache|181.67|✅|\n",
-    "|opt_savings|2023-05-18 10:19|cache|54.75|✅|\n",
-    "|short_path|2023-05-18 10:19|cache|9.81|✅|\n",
-    "|status|2023-05-18 10:19|cache|3.79|✅|\n",
-    "|troubleshooting|2023-05-18 10:05|cache|4.02|✅|\n",
-    "|wealth_dynamics|2023-05-18 10:20|cache|36.03|✅|\n",
-    "|zreferences|2023-05-18 10:05|cache|4.02|✅|\n",
+    "|aiyagari_jax|2023-06-05 09:58|cache|58.81|✅|\n",
+    "|arellano|2023-06-05 09:58|cache|35.81|✅|\n",
+    "|ifp_egm|2023-06-05 10:00|cache|72.04|✅|\n",
+    "|intro|2023-06-05 10:00|cache|1.41|✅|\n",
+    "|inventory_dynamics|2023-06-05 10:06|cache|357.14|✅|\n",
+    "|jax_intro|2023-06-05 10:06|cache|36.75|✅|\n",
+    "|kesten_processes|2023-06-05 10:07|cache|29.03|✅|\n",
+    "|markov_asset|2023-06-05 10:07|cache|21.83|✅|\n",
+    "|mle|2023-06-05 10:07|cache|19.63|✅|\n",
+    "|newtons_method|2023-06-05 10:10|cache|165.07|✅|\n",
+    "|opt_invest|2023-06-05 10:13|cache|186.08|✅|\n",
+    "|opt_savings|2023-06-05 10:14|cache|60.77|✅|\n",
+    "|short_path|2023-06-05 10:14|cache|9.84|✅|\n",
+    "|status|2023-06-05 10:15|cache|3.9|✅|\n",
+    "|troubleshooting|2023-06-05 10:00|cache|1.41|✅|\n",
+    "|wealth_dynamics|2023-06-05 10:15|cache|36.03|✅|\n",
+    "|zreferences|2023-06-05 10:00|cache|1.41|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40ae3698",
+   "id": "ac1721b9",
    "metadata": {
     "hide-output": false
    },
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c905aa",
+   "id": "628a6dbe",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a787d28c",
+   "id": "f89806fc",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +73,7 @@
   }
  ],
  "metadata": {
-  "date": 1684405498.6636882,
+  "date": 1686803729.2096946,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
